# Project-C-

./: CMakeLists.txt  MakeFile
coding/: Animation.cpp  Animation.h  Bat.h  Collider.cpp  Collider.h  Enemy.cpp  Enemy.h  Fire.h  Gem.cpp  Gem.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Visuals.cpp  Visuals.h  Weapon.cpp  Weapon.h  Whip.cpp  Whip.h  main.cpp  openwindow.cpp
